# data-centre-resourcing

./: pyproject.toml
config/: base_config.yaml  brisbane_facility.yaml  sweep.yaml  test_config.yaml
config/cooling/: combo.yaml  cooling_tower.yaml  dry_air_cooling.yaml  liquid_immersion.yaml
config/load_shift/: 8_hours.yaml  no_shift.yaml
config/locations/: brisbane.yaml
dc/: config.py  main.py  summarise.py
dc/network/: builder.py  carriers.py  metrics.py  models.py  report.py  solver.py  tmy_solar.py
dc/network/ppa/: profiles.py
notebooks/: nb1.ipynb
output/: .~lock.metrics.csv#  metrics.csv  results_aggregated.csv
output/sweeps/: multirun.yaml
output/sweeps/tier=0.0_shift=0.0/: network.nc  results.json
output/sweeps/tier=0.0_shift=0.001/: network.nc  results.json
output/sweeps/tier=0.0_shift=0.01/: network.nc  results.json
output/sweeps/tier=0.0_shift=0.1/: network.nc  results.json
output/sweeps/tier=100.0_shift=0.0/: network.nc  results.json
output/sweeps/tier=100.0_shift=0.001/: network.nc  results.json
output/sweeps/tier=100.0_shift=0.01/: network.nc  results.json
output/sweeps/tier=100.0_shift=0.1/: network.nc  results.json
output/sweeps/tier=150.0_shift=0.0/: network.nc  results.json
output/sweeps/tier=150.0_shift=0.001/: network.nc  results.json
output/sweeps/tier=150.0_shift=0.01/: network.nc  results.json
output/sweeps/tier=150.0_shift=0.1/: network.nc  results.json
output/sweeps/tier=30.0_shift=0.0/: network.nc  results.json
output/sweeps/tier=30.0_shift=0.001/: network.nc  (+1 more)
tests/test_ppa/: test_profiles.py
(+68 files in other folders)
